--- a/style/global.css
+++ b/style/global.css
@@ -85,7 +85,7 @@ h2 {
 
 
 /*=============== Content Sections Container ===============*/
-.content {
+.content-sections {
   border-radius: var(--border-radius);
   background: white;
   width: 100%;
@@ -94,7 +94,7 @@ h2 {
   scroll-behavior: smooth;
 }
 
-.content-card {
+.content-sections section {
   display: flex;
   flex-direction: column;
   align-items: center;
