--- a/style/content-sections.css
+++ b/style/content-sections.css
@@ -1,36 +1,119 @@
+
+/*=============== Content Sections Container ===============*/
+.content-sections {
+  --right-border-radius: 6px;
+  border-bottom-right-radius: var(--right-border-radius);
+  border-top-right-radius: var(--right-border-radius);
+  background: var(--content-section-bg);
+  color: var(--sections-font-clr);
+  width: 100%;
+  overflow: auto;
+  scroll-snap-type: y mandatory; 
+  overflow-y: scroll;
+  scroll-behavior: smooth; 
+  padding: 0 18px;
+}
+
+.content-sections section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100%;
+  /* border-bottom: 1px solid black; */
+  margin-bottom: 0px;
+  scroll-snap-align: start;
+}
+
+.content-sections section:not(:nth-child(1)):not(:nth-child(2)):not(:last-child) {
+  min-height: fit-content
+}
+
+.section-heading{
+  font-size: 2rem;
+  color: var(--sections-heading-font-hightlight);
+  text-align: left;
+}
+
 /*=============== HOME SECTION ===============*/
+.home-section{
+  padding-top: 25px;
+  padding-bottom: 50px;
+}
+
 .home-section h1{
   font-size: 3.5rem;
   font-weight: bolder;
   text-align: center;
-  margin: 20px;
+  color: var(--sections-heading-font-hightlight);
 }
 
 /*=============== ABOUT SECTION ===============*/
 .about-section {
   display: flex;
   flex-direction: column;
+  padding-bottom: 50px;
+}
+
+.about-section .section-heading{
+  text-align: left;
+}
+
+.about-section .about-me{
+  margin-top: 0;
 }
 
 .about-item {
   width: 100%;
   margin: 0.5rem 0;
+  margin-bottom: 30px;
 }
 
-.about-section .skill {
-  background-color: var(--accent-color);
-  color: #fff;
-  line-height: 35px;
-  padding: 5px 10px;
-  border-radius: 15px;
+.about-item__heading{
+  color: var(--sections-heading-font-hightlight);
+  margin-bottom: 10px;
+}
+
+.tools-and-languge-container{
+  display: grid;
+  gap: 20px;
+}
+
+.tools-list{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 12px;
+  row-gap: 20px;
+}
+
+.about-section .tool{
+  display: flex;
+  gap: 7px;
+  text-align: center;
+  align-items: center;
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  padding: 5px 15px;
+  border-radius: 20px;
   cursor: pointer;
+}
+
+.tool-icon{
+  --size: 30px;
+
+  width: var(--size);
+  height: var(--size);
+  border-radius: 5px;
+}
+
+.tool-label{
+  margin-bottom: 0;
 }
 
 .about-section .language {
   margin-bottom: 15px;
 }
 
-.about-section .language-label {
+.about-section .language-label{
   margin: 0;
 }
 
@@ -45,19 +128,25 @@
 .about-section .language-bar span {
   height: 8px;
   float: left;
-  background: var(--accent-color);
+  background: #41339bb4;
 }
 
-.about-section .language .polish {
+.about-section .language .first-bar {
   width: 100%;
 }
 
-.about-section .language .english {
+.about-section .language .second-bar {
   width: 75%;
 }
 
 /*=============== PROJECTS SECTION ===============*/
+.projects-section{
+  padding-bottom: 100px;
+}
+
 .project-list {
+  display: grid;
+  gap: 30px;
   margin: 20px 0;
 }
 
@@ -67,12 +156,13 @@
   flex-direction: column;
   justify-content: end;
   background: var(--light-grey);
+  border-radius: 5px;
   color: transparent;
   width: 100%;
   height: 215px;
   margin: auto;
   overflow: hidden;
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.502);
 }
 
 .project-card__img {
@@ -85,7 +175,7 @@
 }
 
 .project-card__overlay {
-  background: #a8858fe0;
+  background: #473aa0dd;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -118,16 +208,21 @@
 }
 
 /*=============== EXPERIENCE SECTION ===============*/
+.experience-section{
+  padding-bottom: 30px;
+}
+
 .timeline-container {
   position: relative;
+  height: 100%;
 }
 
 .timeline-container::before {
   content: "";
   position: absolute;
   width: 2px;
-  top: 55px;
-  height: calc(100% - 100px);
+  top: 25px;
+  height: calc(100% - 75px);
   background-color: var(--accent-color);
   z-index: 100;
 }
@@ -152,13 +247,26 @@
 }
 
 .timeline-item {
-  margin: 50px 0;
+  margin: 45px 0;
+}
+
+.timeline-item:first-child {
+  margin: 20px 0;
 }
 
 /*=============== CONTACT SECTION ===============*/
+.contact-section{
+  padding-bottom: 20px;
+}
+
+.contact-section .section-heading{
+  margin-bottom: 20px;
+}
+
 .contact-form {
   width: 100%;
   max-width: 600px;
+  padding: 0 10px;
 }
 
 .input-box {
@@ -169,10 +277,9 @@
 .input-box input,
 textarea {
   width: 100%;
-  margin: 1rem;
   color: var(--accent-color);
   font-size: 1rem;
-  padding-left: 0.3rem;
+  margin-bottom: 30px;
 }
 
 .input-box input::placeholder,
@@ -204,18 +311,20 @@ textarea {
   border: none;
   border-bottom: solid 2px var(--accent-color);
   padding-top: 8px;
+  background: transparent;
 }
 
 .contact-form .submit-btn {
   padding: 10px 20px;
-  margin: 50px 0;
   border-radius: 30px;
   border: none;
   transition-property: background-color, color;
   transition: 0.2s linear;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
   color: white;
+  font-weight: 600;
   background-color: var(--accent-color);
+  width: 100%;
 }
 
 .submit-btn:hover {
@@ -223,6 +332,13 @@ textarea {
   transition-property: background-color, color;
   cursor: pointer;
   background-color: #8d495d;
+}
+
+/*=============== MEDIA QUERY ===============*/
+@media(width >= 700px){
+  .content-sections {
+    padding: 0 50px;
+  }
 }
 
 /*=============== MEDIA QUERY ===============*/
