--- a/style/main-profile.css
+++ b/style/main-profile.css
@@ -1,34 +1,42 @@
 
 /*=============== HEADER ===============*/
 .main-profile {
+  --left-border-radius: 6px; 
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 500px;
+  width: 100%;
   height: 100%;
-  border-radius: var(--border-radius);
-  color: white;
-  overflow: auto;
+  border-top-left-radius: var(--left-border-radius);
+  border-bottom-left-radius: var(--left-border-radius);
+  background-color: var(--main-profile-bg);
+  color: var(--main-profile-font-clr);
+  box-shadow: var(--side-box-shadow);
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 0;
 }
 
 .main-profile__img {
-  width: 150px;
+  width: clamp(120px, 20vw, 150px);
   height: auto;
   border-radius: 50%;
-  margin: 10px;
-  margin-top: 100px;
-  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
+  margin: 13px;
+  box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.5);
 }
 
 .main-profile__skill {
   font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 8px;
 }
 
 .main-profile__socials-list{
-  margin: 20px;
+  margin-bottom: 30px;
 }
 
 .main-profile__socials-list a {
+  font-size: 1.3rem;
   color: white;
   margin: 0 10px;
   transition: 0.2s linear;
@@ -45,7 +53,7 @@
   color: #fff;
   background-color: rgba(255, 255, 255, 0.274);
   padding: 10px 20px;
-  margin: 50px 0;
+  /* margin: 50px 0; */
   border-radius: 30px;
   transition: 0.2s linear;
   transition-property: background-color, color;
@@ -59,3 +67,10 @@
   transition-property: background-color, color;
 }
 
+
+@media(width >= 750px){
+  .main-profile {
+    width: 100%;
+    max-width: 350px;
+  }
+}
