--- a/style/nav-list.css
+++ b/style/nav-list.css
@@ -1,24 +1,37 @@
-/*=============== MENU ===============*/
 .navigation-list {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 25px;
   align-items: center;
   justify-content: center;
-  order: 2;
-  background: #fff;
-  width: 70px;
+  background: rgb(180, 180, 180);
+  width: fit-content;
+  max-height: 300px;
   margin-left: 20px;
-  border-radius: 35px;
-  padding: 15px 0;
+  border-radius: 20px;
+  padding: 12px 20px;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  margin-left: auto;
 }
 
 .navigation-list__icon {
-  font-size: 2rem;
-  color: var(--light-grey);
-  margin: 15px;
+  font-size: clamp(1rem, 7vw, 1.4rem);
+  color: rgb(51, 51, 51);
+}
+
+.navigation-list__icon.active{
+  color: var(--sections-heading-font-hightlight);
 }
 
 .navigation-list__icon:hover {
   color: var(--accent-color);
+}
+
+@media(width >= 700px){
+  .navigation-list {
+    flex-direction: column;
+    order: 2;
+    padding: 20px 10px;
+  }
 }
