--- a/style/global.css
+++ b/style/global.css
@@ -58,6 +58,7 @@ h2 {
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body{
@@ -65,7 +66,8 @@ body{
   font-size: 16px;
   font-family: "Montserrat", sans-serif;
   background-color: var(--background-color);
-  overflow: hidden;
+  padding-top: 10px;
+
 }
 
 .main-wrapper {
@@ -77,18 +79,17 @@ body{
   flex-direction: column;
   align-items: center;
   /* flex-direction: column; */
-  
-  gap: 15px;
+  gap: 10px;
   width: min(var(--wrapper-max-width), 100% - var(--wrapper-padding));
   min-height: 100%;
   margin-inline: auto;
-  padding-top: 10px;
 }
 
 .portfolio {
   display: flex;
   flex-direction: column;
-  height: 570px;
+  height: 100%;
+  max-height: 580px;
   width: 100%;
   border-radius: 30px;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
