--- a/style/nav-list.css
+++ b/style/nav-list.css
@@ -1,4 +1,6 @@
 .navigation-list {
+  position: fixed;
+  right: 15px;
   display: flex;
   flex-direction: row;
   gap: 25px;
@@ -11,7 +13,7 @@
   border-radius: 20px;
   padding: 12px 20px;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  z-index: 0;
   margin-left: auto;
 }
 
