--- a/style/content-sections.css
+++ b/style/content-sections.css
@@ -79,22 +79,22 @@
   gap: 20px;
 }
 
-.tools-list{
+.tools-list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 12px;
-  row-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 13px; 
+  max-width: 100%; 
 }
 
-.about-section .tool{
+.about-section .tool {
   display: flex;
+  align-items: center;
   gap: 7px;
   text-align: center;
-  align-items: center;
   color: var(--accent-color);
   border: 1px solid var(--accent-color);
-  padding: 5px 15px;
-  border-radius: 20px;
+  padding: 5px 10px;
+  border-radius: 7px;
   cursor: pointer;
 }
 
@@ -112,10 +112,18 @@
 
 .about-section .language {
   margin-bottom: 15px;
+  max-width: 300px;
+  width: 100%;
+  display: inline-block;
+}
+
+.about-section .language:nth-child(2){
+  margin-right: 30px;
 }
 
 .about-section .language-label{
   margin: 0;
+  font-weight: 500;
 }
 
 .about-section .language-bar {
@@ -147,8 +155,9 @@
 
 .project-list {
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   gap: 30px;
-  margin: 20px 0;
+  max-width: 100%;
 }
 
 .project-card {
@@ -160,7 +169,7 @@
   border-radius: 5px;
   color: transparent;
   width: 100%;
-  height: 215px;
+  height: 270px;
   margin: auto;
   overflow: hidden;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.502);
