--- a/style/content-sections.css
+++ b/style/content-sections.css
@@ -1,18 +1,13 @@
-
 /*=============== Content Sections Container ===============*/
 .content-sections {
   position: relative;
   background: var(--content-section-bg);
   color: var(--sections-font-clr);
   width: 100%;
-  /* overflow: auto;
-  scroll-snap-type: y mandatory; 
-  overflow-y: scroll;
-  scroll-behavior: smooth;  */
   padding: 0 18px;
   margin-top: 403px;
   z-index: 1;
-  height: 100%;
+  max-height: 100%;
 }
 
 .content-sections section {
@@ -37,7 +32,7 @@
 
 /*=============== HOME SECTION ===============*/
 .home-section{
-  padding-top: 50px;
+  padding-top: 11%;
   padding-bottom: 90px;
 }
 
@@ -96,6 +91,11 @@
   padding: 5px 10px;
   border-radius: 7px;
   cursor: pointer;
+  transition: 0.1s;
+}
+
+.about-section .tool:hover{
+  background-color: #41339b60
 }
 
 .tool-icon{
@@ -282,6 +282,7 @@
 .input-box {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .input-box input,
@@ -290,17 +291,25 @@ textarea {
   color: var(--accent-color);
   font-size: 1rem;
   margin-bottom: 30px;
+  transition: 0.2s;
+  padding-left: 5px;
 }
 
 .input-box input::placeholder,
 textarea::placeholder {
   color: var(--accent-color);
   font-size: 1rem;
-  padding-left: 0.3rem;
+  opacity: 0.8;
 }
 
 .input-box textarea::placeholder {
   padding-top: 0.3rem;
+}
+
+.input-box input:hover,
+textarea:hover {
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
+  outline: none;
 }
 
 .input-box input:focus,
@@ -309,11 +318,14 @@ textarea:focus {
   outline: none;
 }
 
+
 .text-input {
   height: 2rem;
   background-color: transparent;
   border: none;
   border-bottom: solid 2px var(--accent-color);
+  padding: 0px 8px;
+  color: var(--accent-color);
 }
 
 textarea {
@@ -343,7 +355,7 @@ textarea {
   transition: 0.2s linear;
   transition-property: background-color, color;
   cursor: pointer;
-  background-color: #8d495d;
+  background-color: #533fd4;
 }
 
 
@@ -379,10 +391,38 @@ footer{
 
 
 /*=============== MEDIA QUERY ===============*/
-@media(width >= 700px){
-  .content-sections {
-    padding: 0 50px;
+@media(width >= 650px){
+  .contact-form__inputs-field{
+    display: flex;
+    gap: 30px
   }
+}
+
+@media(width >= 900px){
+  .content-sections {
+    position: relative;
+    background: var(--content-section-bg);
+    color: var(--sections-font-clr);
+    width: 100%;
+    min-height: 100%;
+    overflow: auto;
+    scroll-snap-type: y mandatory; 
+    overflow-y: scroll;
+    scroll-behavior: smooth; 
+    padding: 0 5%;
+    margin-top: 0px;
+    z-index: 1;
+  }
+
+  .contact-form .submit-btn {
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  footer{
+    display: none;
+  }
+
 }
 
 /*=============== MEDIA QUERY ===============*/
