--- a/style/global.css
+++ b/style/global.css
@@ -70,14 +70,13 @@ body{
 }
 
 .main-wrapper {
-  --wrapper-max-width: 1130px;
+  --wrapper-max-width: 1100px;
   --wrapper-padding: 6%;
 
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* flex-direction: column; */
   gap: 10px;
   width: min(var(--wrapper-max-width), 100% - var(--wrapper-padding));
   min-height: 100%;
@@ -85,26 +84,28 @@ body{
 }
 
 .portfolio {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-height: 580px;
+  max-height: 500px;
   width: 100%;
   border-radius: 30px;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
 }
 
 
-@media(width >= 700px){
+@media(width >= 900px){
+  body{
+    padding-top: 0px;
+    padding-bottom: 10px;
+  }
+
   .main-wrapper{
     flex-direction: row;
   }
 
   .portfolio {
     flex-direction: row;
-  }
-
-  .content-sections {
-    padding: 0 50px;
   }
 }
