--- a/style/main-profile.css
+++ b/style/main-profile.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 94%;
+  width: 93.8%;
   height: 350px;
   border-top-left-radius: var(--top-border-radius);
   border-top-right-radius: var(--top-border-radius);
@@ -38,7 +38,7 @@
 }
 
 .main-profile__socials-list a {
-  font-size: 1.3rem;
+  font-size: 1.35rem;
   color: white;
   margin: 0 10px;
   transition: 0.2s linear;
@@ -70,9 +70,13 @@
 }
 
 
-@media(width >= 750px){
+@media(width >= 900px){
   .main-profile {
+    position: relative;
+    top: 0px;
     width: 100%;
     max-width: 350px;
+    height: 500px;
+    padding-top: 50px
   }
 }
