--- a/style/nav-list.css
+++ b/style/nav-list.css
@@ -1,6 +1,6 @@
 .navigation-list {
   position: fixed;
-  right: 15px;
+  right: 3.4%;
   display: flex;
   flex-direction: row;
   gap: 25px;
@@ -30,8 +30,10 @@
   color: var(--accent-color);
 }
 
-@media(width >= 700px){
+@media(width >= 900px){
   .navigation-list {
+    position: relative;
+    right: 0%;
     flex-direction: column;
     order: 2;
     padding: 20px 10px;
