--- a/style/main-profile.css
+++ b/style/main-profile.css
@@ -28,13 +28,19 @@
 }
 
 .main-profile__skill {
+  line-height: 1.3em;
   font-size: 1rem;
   font-weight: 500;
-  margin-bottom: 8px;
+}
+
+.main-profile__email{
+  font-size: 0.9rem;
+  margin-bottom: 30px;
+  opacity: 0.5;
 }
 
 .main-profile__socials-list{
-  margin-bottom: 30px;
+  margin-bottom: 8px;
 }
 
 .main-profile__socials-list a {
@@ -54,7 +60,7 @@
 .main-profile__cta{
   color: #fff;
   background-color: rgba(255, 255, 255, 0.274);
-  padding: 10px 20px;
+  padding: 10px 23px;
   /* margin: 50px 0; */
   border-radius: 30px;
   transition: 0.2s linear;
