--- a/style/content-sections.css
+++ b/style/content-sections.css
@@ -158,11 +158,29 @@
   padding-bottom: 5px;
 }
 
-.project-list {
+.project-cards-container .d-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   gap: 20px;
   max-width: 100%;
+  margin-bottom: 20px;
+}
+
+.d-grid.more-project-list{
+  transition: display 0.5s;
+}
+
+.d-grid.more-project-list.hide{
+  display: none;
+}
+
+.project-cards-container__toggle-btn{
+  color: var(--accent-color);
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 1.1rem;
 }
 
 .project-card {
@@ -305,6 +323,7 @@
 /*=============== CONTACT SECTION ===============*/
 .contact-section{
   padding-bottom: 14px;
+  scroll-snap-align: auto;
 }
 
 .contact-section .section-heading{
@@ -409,7 +428,7 @@ footer{
   padding-bottom: 20px;
 }
 
-.scroll-top-btn{
+.footer__scroll-top-btn{
   display: flex;
   gap: 9px;
   width: fit-content;
@@ -425,6 +444,10 @@ footer{
 
   height: var(--size);
   width: var(--size);
+}
+
+.footer__email{
+  color: black;
 }
 
 
@@ -464,18 +487,17 @@ footer{
 
   .contact-section{
     padding-top: 109px !important; 
-    padding-bottom: 100px;
+    padding-bottom: 0px;
   }
 
   .contact-form .submit-btn {
     margin-top: 30px;
-    margin-bottom: 0px;
+    margin-bottom: 80px;
   }
 
   footer{
     display: none;
   }
-
 }
 
 /*=============== MEDIA QUERY ===============*/
