--- a/style/content-sections.css
+++ b/style/content-sections.css
@@ -48,7 +48,7 @@
 .about-section {
   display: flex;
   flex-direction: column;
-  padding-bottom: 70px;
+  padding-bottom: 100px;
 }
 
 .about-section .section-heading{
@@ -202,9 +202,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   z-index: 1;
-  filter: contrast(70%) brightness(110%) grayscale(20%);
+  /* filter: contrast(70%) brightness(110%) grayscale(10%); */
 }
 
 .project-card__overlay {
